# cmake-create-app

./: CMakeLists.txt  README.md
cmake/: dependencies.cmake
examples/example1/: CMakeLists.txt  main.cc
modules/: CMakeLists.txt
modules/module1/: CMakeLists.txt  basic.cc  basic.h
