set(the_app example1)
include_directories(${cca_include_dirs} ${OpenCV_INCLUDE_DIRS})
include_directories(${cca_include_dirs} ${Protobuf_INCLUDE_DIRS})
file(GLOB example1_srcs "*.cc")
file(GLOB example1_hdrs "*.h")
add_executable(${the_app} ${example1_srcs} ${example1_hdrs})
if(MSVC)
	target_link_libraries(${the_app} ${OpenCV_LIBS} ${Protobuf_LIBS})
elseif(UNIX AND NOT APPLE)
	target_link_libraries(${the_app} ${OpenCV_LIBS} ${Protobuf_LIBS})
elseif(APPLE)
	target_link_libraries(${the_app} ${OpenCV_LIBS} ${Protobuf_LIBS})
else()
	message("No support platform.")
endif()
set_target_properties(${the_app} PROPERTIES FOLDER "example1")